--- a/.github/workflows/jagw-pipeline.yml
+++ b/.github/workflows/jagw-pipeline.yml
@@ -14,6 +14,9 @@ on:
         description: "Type (dev | release)"
         required: true
         type: string
+      protorepo_jagw_go_commit_sha:
+        required: true
+        type: string
 
 jobs:
   call-merge-to-main:
@@ -45,5 +48,7 @@ jobs:
       tag_name: ${{ github.event.inputs.tag_name }}
       build_branch: ${{ github.event.inputs.build_branch }}
       type: ${{ github.event.inputs.type }}
+      protorepo_jagw_go_commit_sha: ${{ github.event.inputs.protorepo_jagw_go_commit_sha }}
+      jagw_core_commit_sha: ${{ needs.call-create-tag.outputs.commit_sha }}
     secrets:
       pat_full_repo_access: ${{ secrets.PAT_FULL_REPO_ACCESS }}
