--- a/.github/workflows/jagw-pipeline.yml
+++ b/.github/workflows/jagw-pipeline.yml
@@ -15,6 +15,7 @@ on:
         required: true
         type: string
       protorepo_jagw_go_ref:
+        description: "Ref used by other go modules to import this version"
         required: true
         type: string
 
