--- a/.github/workflows/jagw-pipeline.yml
+++ b/.github/workflows/jagw-pipeline.yml
@@ -10,7 +10,7 @@ on:
         description: "Build branch (dev | main)"
         required: true
         type: string
-      type:
+      release_or_dev:
         description: "Type (dev | release)"
         required: true
         type: string
@@ -21,7 +21,7 @@ on:
 
 jobs:
   call-merge-to-main:
-    if: github.event.inputs.type == 'release'
+    if: github.event.inputs.release_or_dev == 'release'
     uses: jalapeno-api-gateway/jagw-core/.github/workflows/merge-to-main.yml@dev
   call-create-tag:
     needs: [call-merge-to-main]
@@ -29,15 +29,9 @@ jobs:
     if: |
       always() &&
       (needs.call-merge-to-main.result == 'success' || needs.call-merge-to-main.result == 'skipped')
-    with:
-      release_type: ${{ github.event.inputs.release_type }}
-      branch: ${{ github.event.inputs.build_branch }}
-      tag_name: ${{ github.event.inputs.tag_name }}
   call-create-release:
     needs: [call-merge-to-main, call-create-tag]
     uses: jalapeno-api-gateway/jagw-core/.github/workflows/create-release.yml@dev
-    with:
-      tag_name: ${{ github.event.inputs.tag_name }}
   call-trigger-remote-repo:
     needs: [call-create-tag]
     uses: jalapeno-api-gateway/jagw-core/.github/workflows/trigger-remote-repo.yml@dev
@@ -47,9 +41,6 @@ jobs:
       needs.call-create-tag.result == 'success'
     with:
       workflow_file: jagw-pipeline.yml
-      tag_name: ${{ github.event.inputs.tag_name }}
-      build_branch: ${{ github.event.inputs.build_branch }}
-      type: ${{ github.event.inputs.type }}
       protorepo_jagw_go_ref: ${{ github.event.inputs.protorepo_jagw_go_commit_sha }}
       jagw_core_ref: ${{ needs.call-create-tag.outputs.jagw_core_ref }}
     secrets:
