--- a/.github/workflows/trigger-remote-repo.yml
+++ b/.github/workflows/trigger-remote-repo.yml
@@ -3,26 +3,6 @@ name: Trigger Remote Repo
 on: 
   workflow_call:
     inputs:
-      workflow_file:
-        description: "Name of the workflow file to trigger"
-        type: string
-        required: true
-      tag_name:
-        description: "Name of the current tag"
-        type: string
-        required: true      
-      build_branch:
-        description: "Name of the build branch (dev | main)"
-        type: string
-        required: true
-      type:
-        description: "dev | release"
-        type: string
-        required: true
-      protorepo_jagw_go_ref:
-        description: "Ref used by other go modules to import this version"
-        type: string
-        required: true
       jagw_core_ref:
         description: "Ref used by other go modules to import this version"
         type: string
@@ -45,8 +25,8 @@ jobs:
           repo: ${{ matrix.repo_name }}
           github_token: ${{ secrets.pat_full_repo_access }}
           github_user: mbongard
-          workflow_file_name: ${{ inputs.workflow_file }}
+          workflow_file_name: jagw-pipeline.yml
           ref: dev
-          client_payload: '{"tag_name": "${{ inputs.tag_name }}", "build_branch": "${{ inputs.build_branch }}", "type": "${{ inputs.type }}", "protorepo_jagw_go_ref": "${{ inputs.protorepo_jagw_go_ref }}", "jagw_core_ref": "${{ inputs.jagw_core_ref }}"}'
+          client_payload: '{"tag_name": "${{ github.event.inputs.tag_name }}", "build_branch": "${{ github.event.inputs.build_branch }}", "release_or_dev": "${{ github.event.inputs.release_or_dev }}", "protorepo_jagw_go_ref": "${{ github.event.inputs.protorepo_jagw_go_ref }}", "jagw_core_ref": "${{ inputs.jagw_core_ref }}"}'
           propagate_failure: false
           wait_workflow: false
